sage green background

--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: seagreen;
+    background-color: #c1d0b5;
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
