--- a/popup.css
+++ b/popup.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     background-color: #c1d0b5;
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif, sans-serif;
     display: flex;
     flex-direction: column;
     height: 500px; /* Adjust height as needed */
