--- a/popup.css
+++ b/popup.css
@@ -10,8 +10,8 @@ body {
     font-family: 'Jersey 20', sans-serif;
     display: flex;
     flex-direction: column;
-    height: 500px; /* Adjust height as needed */
-    width: 500px; /* Adjust width as needed */
+    height: 600px; /* Adjust height as needed */
+    width: 600; /* Adjust width as needed */
 }
 
 .content {
