--- a/popup.css
+++ b/popup.css
@@ -4,6 +4,27 @@
     font-style: normal;
   }  
 
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Full viewport height */
+    width: 100vw; /* Full viewport width */
+  }
+  
+  .plant-image {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px; /* Space between image and other content */
+  }
+  
+  #plantImage {
+    width: 150px; /* Adjust size as needed */
+    height: auto;
+  }
+
+
 body {
     margin: 0;
     background-color: #c1d0b5;
